Fix compatibility issues on Firefox, Safari and IE (#1228)

--- a/src/app/frontend/chrome/chrome.scss
+++ b/src/app/frontend/chrome/chrome.scss
@@ -45,6 +45,7 @@
 body,
 .kd-app-content {
   background-color: $body;
+  max-height: 100%;
 }
 
 a {
